Make CoffeeChoice a global variable so it can be used in the Confirmation message. Change the buttons to have the same layout. Hide the name input field when the Start conversation button is visible. Remove the start conversation button when the name input field is visible. Remove name input field after submit. Add CSS to style the selectbuttons and the name input field. Add requestAnimationFrame to avoid scrolling to see the buttons on the form

--- a/code/style.css
+++ b/code/style.css
@@ -94,22 +94,20 @@ main {
   display: flex;
   justify-content: center;
 }
-.buttons {
-  display: inline-block;
-  padding: 10px 20px;
-  margin: 10px;
-  background-color: #0026ff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  text-align: center;
+
+#name-form {
+  display: none;
 }
+#name-form.show {
+  display: flex; /* Show name input field*/
+  align-items: center
+}
+
 .hidden { /*Hide Start conversation button */
   display: none;
 }
 
-.size-button {
+.selection-button {
   display: inline-block; /*Make buttons visible*/
   padding: 10px 20px;
   margin: 10px;
